[metadata]
name = gravi_align
version = 0.5.8
description = A CLI facility to align GRAVITY data.
long_description = file: README.md
long_description_content_type = text/markdown
author = A. Soulain
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.entry_points]
console_scripts =
    gravi_align=gravi_align.cli:main

[options]
packages = find:
install_requires =
    astropy
    matplotlib
    numpy
    scipy
    termcolor
    tsmoothie
    tabulate
    seaborn
    pandas
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    doc*

[options.extras_require]
dev =
    pytest

[options.package_data]
gravi_align = internal_data/*.txt